# deriva-mcp-ui

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yaml
docs/: ADR-0001-slash-commands.md  workplan-deriva-mcp-ui.md
src/deriva_mcp_ui/: __init__.py  audit.py  auth.py  chat.py  config.py  mcp_client.py  server.py
src/deriva_mcp_ui/static/: chat.js  index.html
src/deriva_mcp_ui/storage/: __init__.py  base.py  memory.py  postgresql.py  redis.py  sqlite.py  valkey.py
tests/: test_audit.py  test_auth.py  test_chat.py  test_config.py  test_mcp_client.py  test_scaffold.py  test_server.py  test_storage.py  test_storage_backends.py
