[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deriva-mcp-ui"
version = "0.1.0"
description = "Browser-based chatbot interface for DERIVA"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Informatics and Scientific Research Division, USC" }
]
keywords = ["mcp", "deriva", "chatbot", "anthropic"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",        
]

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "anthropic>=0.28",
    "mcp>=1.9.0",
    "pydantic-settings>=2.0",
    "python-json-logger>=3.0",
]

[project.optional-dependencies]
redis = [
    "redis>=5.0",
]
postgresql = [
    "asyncpg>=0.29",
]
sqlite = [
    "aiosqlite>=0.20",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "httpx>=0.27",
    "ruff>=0.4",
    "pytest-cov>=5.0",
    # backend test deps
    "fakeredis>=2.0",
    "redis>=5.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "testing.postgresql>=1.3",
]

[project.scripts]
deriva-mcp-ui = "deriva_mcp_ui.server:main"

[tool.hatch.build]
artifacts = ["src/deriva_mcp_ui/static/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/deriva_mcp_ui"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]
ignore = ["E402", "E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-vv -r w --tb=short --disable-warnings --cov=deriva_mcp_ui --cov-report=term-missing"
filterwarnings = [
  "always"
]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring live Credenza and MCP services",
]

[tool.coverage.run]
source = ["src/deriva_mcp_ui"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
]